# skyrim-map-weather

./: .gitignore  .gitmodules  CMake Build.bat  CMakeBuild.bat  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: XSEPlugin.cmake  sourcelist.cmake
include/: PCH.h
package/fomod/: ModuleConfig.xml
package/optional/Vanilla Additions/: UMWF - Vanilla Additions.esp
package/optional/Vanilla Additions/MapWeathers/: DLC01SoulCairn.json  DLC2SolstheimWorld.json
src/: Helper.cpp  Helper.h  Hooks.cpp  Hooks.h  WorldMapHandler.cpp  WorldMapHandler.h  WorldMapWeatherHandler.cpp  WorldMapWeatherHandler.h  XSEPlugin.cpp  main.cpp  main.h
